[package]
name = "holup"
version = "0.1.0"
authors = ["CaptainSpof <captain.spof@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
tera = "1.7.1"
rand = "0.8.3"
easy_reader = "0.5.0"
dialoguer = "0.8.0"
console = "0.14.1"
random-ramble = { path = "../random-ramble/core" }
